# langchain-ray-example

./: .gitignore  BUILD.bazel  README.md  build_index.py  build_index_with_ray.py  embeddings.py  query.py  requirementx.frozen.txt  requirementx.txt  serve.py  submit_build_index.py
data/: .gitignore  BUILD.bazel  README.md
